Fix missing /24 in interface configuration

--- a/setup/dhcpcd.conf
+++ b/setup/dhcpcd.conf
@@ -42,6 +42,6 @@ nohook lookup-hostname
 
 # we really do not want to get an address from eth0, folks
 interface eth0
-static ip_address=10.10.76.13
+static ip_address=10.10.76.13/24
 static domain_name_servers=10.10.76.1
 
